--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 
 numpy==1.26.4
 scipy==1.13.1
-streamlit==1.36.0
-scikit-learn==1.4.2
-seaborn==0.13.2
-tensorflow==2.17.0
-streamlit_option_menu==0.3.13
 folium==0.17.0
+seaborn==0.13.2
+streamlit==1.36.0
+tensorflow==2.17.0
+scikit-learn==1.4.2
+streamlit_folium==0.22.0
+streamlit_option_menu==0.3.13
+
+
+
