--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ seaborn==0.13.2
 streamlit==1.36.0
 tensorflow==2.17.0
 scikit-learn==1.4.2
+scikit-surprise==1.1.4
 streamlit_folium==0.22.0
 streamlit_option_menu==0.3.13
 
