--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 data/users.csv filter=lfs diff=lfs merge=lfs -text
 pickled_files/svd.pkl filter=lfs diff=lfs merge=lfs -text
+data/new_df.csv filter=lfs diff=lfs merge=lfs -text
